--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,8 @@
     <link
       href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@200;400;700&family=Montserrat:ital,wght@0,400;1,700&display=swap"
       rel="stylesheet">
+      <!-- Animate.style -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
